--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@
   link: /about/
 - name: Services
   link: /services/
-- name: Projects
-  link: /projects/
+- name: Work
+  link: /work/
 - name: Contact
   link: /contact/
